fixed horizontal scroll

--- a/sources/styles/_global.scss
+++ b/sources/styles/_global.scss
@@ -3,5 +3,7 @@
     // width: 1440px;
     width: 100vw;
     height: 300vh;
+    max-width: 100%;
+    overflow-x: hidden;
     background-color: red;
 }
