--- a/sources/styles/styles-gallery/style.css
+++ b/sources/styles/styles-gallery/style.css
@@ -77,5 +77,7 @@ select {
 .app {
   width: 100vw;
   height: 300vh;
+  max-width: 100%;
+  overflow-x: hidden;
   background-color: red;
 }/*# sourceMappingURL=style.css.map */
