--- a/sources/styles/styles-homepage/_header.scss
+++ b/sources/styles/styles-homepage/_header.scss
@@ -1,6 +1,13 @@
 .header {
     width: 100%;
-    height: 100px;
+    height: 80px;
     background-color: black;
+    .header-container {
+        width: 80%;
+        height: 100%;
+        display: flex;
+        margin: auto;
+        background: purple;
+    }
 }
 
